--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
     "@ethersproject/bignumber": "^5.1.1",
+    "@ethersproject/providers": "5.5.3",
     "@oclif/command": "^1.8.0",
     "@oclif/errors": "^1.3.5",
     "@types/async-retry": "^1.4.2",
