--- a/package.json
+++ b/package.json
@@ -31,25 +31,18 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.17.1",
     "@ethersproject/bignumber": "^5.1.1",
-    "@oclif/command": "^1.8.0",
-    "@oclif/errors": "^1.3.5",
     "@types/async-retry": "^1.4.2",
     "@types/await-timeout": "^0.3.1",
     "@types/bunyan": "^1.8.6",
     "@types/bunyan-blackhole": "^0.2.2",
     "@types/lodash": "^4.14.168",
-    "@types/sinon": "^10.0.2",
     "@types/stats-lite": "^2.2.0",
     "@uniswap/default-token-list": "^2.0.0",
     "@uniswap/router-sdk": "^1.0.5",
     "@uniswap/swap-router-contracts": "1.2.0",
     "@uniswap/token-lists": "^1.0.0-beta.25",
-    "@uniswap/v2-core": "^1.0.1",
-    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@uniswap/v2-sdk": "^3.0.1",
-    "@uniswap/v3-periphery": "^1.1.1",
     "@uniswap/v3-sdk": "^3.7.0",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
@@ -57,26 +50,30 @@
     "bunyan": "^1.8.15",
     "bunyan-blackhole": "^1.1.1",
     "bunyan-debug-stream": "^2.0.0",
-    "cli-logger": "^0.5.40",
-    "dotenv": "^10.0.0",
-    "ethereum-types": "^3.5.0",
     "ethers": "^5.1.4",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "lodash": "^4.17.21",
     "mnemonist": "^0.38.3",
     "node-cache": "^5.1.2",
-    "stats-lite": "^2.2.0",
-    "tslib": "^1.14.1"
+    "stats-lite": "^2.2.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@oclif/command": "^1.8.0",
+    "@oclif/errors": "^1.3.5",
     "@typechain/ethers-v5": "^7.0.1",
     "@types/jest": "^26.0.24",
     "@types/jest-sinon": "^1.0.2",
     "@types/node": "^15.0.2",
+    "@types/sinon": "^10.0.2",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "@uniswap/v3-core": "^1.0.0",
+    "@uniswap/v3-periphery": "^1.1.1",
+    "dotenv": "^10.0.0",
     "eslint": "^7.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
