--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,10 +38,8 @@
     // "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
     "lib": ["es2017", "dom"],
-    "types": ["node", "jest"],
-    "typeRoots": ["node_modules/@types", "src/types"]
+    "types": ["node", "jest"]
   },
-  "include": ["src/**/*.ts", "cli/**/*.ts"],
-  "exclude": ["node_modules/**"],
+  "include": ["src/index.ts"],
   "compileOnSave": false
 }
