--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@uniswap/smart-order-router",
   "version": "2.5.29",
   "description": "Uniswap Smart Order Router",
-  "main": "build/main/src/index.js",
-  "typings": "build/main/src/index.d.ts",
-  "module": "build/module/src/index.js",
+  "main": "build/main/index.js",
+  "typings": "build/main/index.d.ts",
+  "module": "build/module/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Uniswap/smart-order-router.git"
