fix error: failed to resolve entry for package @uniswap/smart-order-router

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Uniswap Smart Order Router",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
-  "module": "build/module/index.js",
+  "module": "build/main/src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Uniswap/smart-order-router.git"
