--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@types/async-retry": "^1.4.2",
     "@types/await-timeout": "^0.3.1",
     "@types/bunyan": "^1.8.6",
