--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "version": "standard-version",
     "prepare-release": "run-s cov:check doc:html version doc:publish",
     "test": "jest",
-    "integ-test": "jest test/integ"
+    "integ-test": "TS_NODE=true jest test/integ"
   },
   "engines": {
     "node": ">=10"
@@ -36,6 +36,7 @@
     "@types/bunyan": "^1.8.6",
     "@types/bunyan-blackhole": "^0.2.2",
     "@types/lodash": "^4.14.168",
+    "@types/mocha": "^9.1.1",
     "@types/stats-lite": "^2.2.0",
     "@uniswap/default-token-list": "^2.0.0",
     "@uniswap/router-sdk": "^1.0.5",
