Drop scoped jest-env-hardhat for new version 1.1.4

--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "@types/sinon": "^10.0.2",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "@uniswap/jest-environment-hardhat": "^1.1.1",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@uniswap/v3-core": "^1.0.0",
@@ -81,6 +80,7 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
     "jest": "^27.0.6",
+    "jest-environment-hardhat": "^1.1.4",
     "jest-expect-message": "^1.0.2",
     "jest-mock": "^27.0.6",
     "jest-sinon": "^1.0.4",
