--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "version": "standard-version",
     "prepare-release": "run-s cov:check doc:html version doc:publish",
     "test": "jest",
-    "integ-test": "jest test/integ"
+    "integ-test": "TS_NODE=true jest test/integ"
   },
   "engines": {
     "node": ">=10"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@types/async-retry": "^1.4.2",
     "@types/await-timeout": "^0.3.1",
     "@types/bunyan": "^1.8.6",
@@ -49,9 +50,10 @@
     "bunyan": "^1.8.15",
     "bunyan-blackhole": "^1.1.1",
     "bunyan-debug-stream": "^2.0.0",
-    "ethers": "^5.1.4",
+    "ethers": "^5.6.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "hardhat": "^2.9.6",
     "lodash": "^4.17.21",
     "mnemonist": "^0.38.3",
     "node-cache": "^5.1.2",
@@ -62,7 +64,7 @@
     "@oclif/command": "^1.8.0",
     "@oclif/errors": "^1.3.5",
     "@typechain/ethers-v5": "^7.0.1",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.0",
     "@types/jest-sinon": "^1.0.2",
     "@types/node": "^15.0.2",
     "@types/sinon": "^10.0.2",
@@ -78,6 +80,7 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
     "jest": "^27.0.6",
+    "jest-environment-hardhat": "^1.1.4",
     "jest-expect-message": "^1.0.2",
     "jest-mock": "^27.0.6",
     "jest-sinon": "^1.0.4",
