--- a/package.json
+++ b/package.json
@@ -60,10 +60,11 @@
     "stats-lite": "^2.2.0"
   },
   "devDependencies": {
+    "@ethersproject/providers": "^5.4.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@oclif/command": "^1.8.0",
     "@oclif/errors": "^1.3.5",
-    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/ethers-v5": "^7.0.1",
     "@types/jest": "^27.0.0",
     "@types/jest-sinon": "^1.0.2",
     "@types/node": "^15.0.2",
@@ -92,7 +93,7 @@
     "standard-version": "^9.0.0",
     "ts-jest": "^27.0.4",
     "ts-node": "^9.0.0",
-    "typechain": "^8.0.0",
+    "typechain": "^5.0.0",
     "typescript": "^4.2.2"
   },
   "files": [
