--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "@types/lodash": "^4.14.168",
     "@types/stats-lite": "^2.2.0",
     "@uniswap/default-token-list": "^2.0.0",
-    "@uniswap/router-sdk": "^1.0.5",
+    "@uniswap/router-sdk": "file:../router-sdk/uniswap-router-sdk-v1.0.5.tgz",
     "@uniswap/swap-router-contracts": "1.2.0",
     "@uniswap/token-lists": "^1.0.0-beta.25",
     "@uniswap/v2-sdk": "^3.0.1",
-    "@uniswap/v3-sdk": "3.8.2",
+    "@uniswap/v3-sdk": "^3.7.0",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
