--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "bunyan": "^1.8.15",
     "bunyan-blackhole": "^1.1.1",
     "bunyan-debug-stream": "^2.0.0",
-    "ethers": "5.6.1",
+    "ethers": "^5.6.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "hardhat": "^2.9.6",
@@ -60,7 +60,7 @@
     "stats-lite": "^2.2.0"
   },
   "devDependencies": {
-    "@ethersproject/providers": "5.4.0",
+    "@ethersproject/providers": "^5.4.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@oclif/command": "^1.8.0",
     "@oclif/errors": "^1.3.5",
