--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,11 +26,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run linters
+      - name: Run linter
+        run: npm run fix:lint
+
+      - name: Run Prettier
         uses: wearerequired/lint-action@v1
         with:
           github_token: ${{ secrets.github_token }}
-          eslint: true
           prettier: true
           auto_fix: true
           prettier_extensions: 'css,html,js,json,jsx,md,sass,scss,ts,tsx,vue,yaml,yml,sol'
