disable all errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,7 @@
   ],
   "globals": { "BigInt": true, "console": true, "WebAssembly": true },
   "rules": {
-    "@typescript-eslint/no-useless-catch": "off",
-    "@typescript-eslint/no-empty-function": "off",
+    "eslint-comments/no-unlimited-disable": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "eslint-comments/disable-enable-pair": [
       "error",
