--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,9 +30,10 @@ jobs:
         run: npm run fix:lint
 
       - name: Run Prettier
-        uses: wearerequired/lint-action@v1
-        with:
-          github_token: ${{ secrets.github_token }}
-          prettier: true
-          auto_fix: false
-          prettier_extensions: 'css,html,js,json,jsx,md,sass,scss,ts,tsx,vue,yaml,yml,sol'
+        run: npm run fix:prettier
+        # uses: wearerequired/lint-action@v1
+        # with:
+        #   github_token: ${{ secrets.github_token }}
+        #   prettier: true
+        #   auto_fix: false
+        #   prettier_extensions: 'css,html,js,json,jsx,md,sass,scss,ts,tsx,vue,yaml,yml,sol'
