--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "license": "GPL",
   "keywords": [],
   "scripts": {
-    "compile-v3-types": "npx typechain --target ethers-v5 --out-dir src/types/v3 './node_modules/@uniswap/?(v3-core|v3-periphery)/artifacts/contracts/**/*.json'",
-    "compile-v2-types": "npx typechain --target ethers-v5 --out-dir src/types/v2 './node_modules/@uniswap/?(v2-core|v2-periphery)/build/*UniswapV2*.json'",
+    "compile-v3-types": "npx typechain --target ethers-v5 --out-dir src/types/v3 './node_modules/@uniswap/v3-core/artifacts/contracts/**/*.json' './node_modules/@uniswap/v3-periphery/artifacts/contracts/**/*.json'",
+    "compile-v2-types": "npx typechain --target ethers-v5 --out-dir src/types/v2 './node_modules/@uniswap/v2-core/build/*UniswapV2*.json' './node_modules/@uniswap/v2-periphery/build/*UniswapV2*.json'",
     "compile-router": "npx typechain --target ethers-v5 --out-dir src/types/other './node_modules/@uniswap/swap-router-contracts/artifacts/contracts/**/*.json'",
     "compile-external-types": "npx typechain --target ethers-v5 --out-dir src/types/other 'src/abis/**/*.json'",
     "build": "run-p compile-v3-types compile-v2-types compile-router compile-external-types && run-p build:*",
