--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/stats-lite": "^2.2.0",
     "@uniswap/default-token-list": "^2.0.0",
     "@uniswap/router-sdk": "^1.3.0",
-    "@uniswap/swap-router-contracts": "1.2.0",
+    "@uniswap/swap-router-contracts": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.25",
     "@uniswap/v2-sdk": "^3.0.1",
     "@uniswap/v3-sdk": "^3.7.0",
