--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "typescript": "^4.2.2"
   },
   "peerDependencies": {
-    "jsbi": "3.2.5"
+    "jsbi": "^3.2.0"
   },
   "files": [
     "build/main",
