--- a/package.json
+++ b/package.json
@@ -31,8 +31,14 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@ethersproject/abi": "^5.6.0",
+    "@ethersproject/bignumber": "^5.6.2",
+    "@ethersproject/logger": "^5.6.0",
+    "@ethersproject/providers": "^5.4.0",
+    "@ethersproject/units": "^5.6.0",
     "@uniswap/default-token-list": "^2.0.0",
     "@uniswap/router-sdk": "^1.3.0",
+    "@uniswap/sdk-core": "^3.0.1",
     "@uniswap/swap-router-contracts": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.25",
     "@uniswap/v2-sdk": "^3.0.1",
@@ -51,7 +57,6 @@
     "stats-lite": "^2.2.0"
   },
   "devDependencies": {
-    "@ethersproject/providers": "^5.4.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@oclif/command": "^1.8.0",
