--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
   },
   "dependencies": {
     "@uniswap/default-token-list": "^2.0.0",
-    "@uniswap/narwhal": "^1.0.0-beta.4",
-    "@uniswap/narwhal-sdk": "^0.4.1",
-    "@uniswap/permit2-sdk": "^0.4.0",
+    "@uniswap/permit2-sdk": "^1.0.0",
     "@uniswap/router-sdk": "^1.3.0",
     "@uniswap/swap-router-contracts": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.25",
+    "@uniswap/universal-router": "^1.0.1",
+    "@uniswap/universal-router-sdk": "^1.1.0",
     "@uniswap/v2-sdk": "^3.0.1",
     "@uniswap/v3-sdk": "^3.7.0",
     "async-retry": "^1.3.1",
