--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "compile-v3-types": "npx typechain --target ethers-v5 --out-dir src/types/v3 './node_modules/@uniswap/?(v3-core|v3-periphery)/artifacts/contracts/**/*.json'",
     "compile-v2-types": "npx typechain --target ethers-v5 --out-dir src/types/v2 './node_modules/@uniswap/?(v2-core|v2-periphery)/build/*UniswapV2*.json'",
     "compile-router": "npx typechain --target ethers-v5 --out-dir src/types/other './node_modules/@uniswap/swap-router-contracts/artifacts/contracts/**/*.json'",
+    "compile-narwhal": "npx typechain --target ethers-v5 --out-dir src/types/other './node_modules/@uniswap/narwhal/artifacts/contracts/**/*.json'",
     "compile-external-types": "npx typechain --target ethers-v5 --out-dir src/types/other 'src/abis/**/*.json'",
-    "build": "run-p compile-v3-types compile-v2-types compile-router compile-external-types && run-p build:*",
+    "build": "run-p compile-v3-types compile-v2-types compile-router compile-narwhal compile-external-types && run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
@@ -32,9 +33,12 @@
   },
   "dependencies": {
     "@uniswap/default-token-list": "^2.0.0",
+    "@uniswap/permit2-sdk": "^1.0.0",
     "@uniswap/router-sdk": "^1.3.0",
     "@uniswap/swap-router-contracts": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.25",
+    "@uniswap/universal-router": "^1.0.1",
+    "@uniswap/universal-router-sdk": "^1.1.0",
     "@uniswap/v2-sdk": "^3.0.1",
     "@uniswap/v3-sdk": "^3.7.0",
     "async-retry": "^1.3.1",
@@ -42,7 +46,7 @@
     "axios": "^0.21.1",
     "bunyan": "^1.8.15",
     "bunyan-blackhole": "^1.1.1",
-    "ethers": "^5.6.1",
+    "ethers": "^5.7.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "lodash": "^4.17.21",
@@ -79,7 +83,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "hardhat": "^2.9.6",
+    "hardhat": "^2.12.2",
     "jest": "^27.0.6",
     "jest-environment-hardhat": "^1.1.8",
     "jest-expect-message": "^1.0.2",
