--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@uniswap/default-token-list": "^2.0.0",
     "@uniswap/permit2-sdk": "^1.2.0",
     "@uniswap/router-sdk": "^1.3.0",
-    "@uniswap/sdk-core": "^3.2.6",
     "@uniswap/swap-router-contracts": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.25",
     "@uniswap/universal-router": "^1.0.1",
@@ -101,6 +100,9 @@
   },
   "peerDependencies": {
     "jsbi": "^3.2.0"
+  },
+  "overrides": {
+    "@uniswap/sdk-core": "3.2.6"
   },
   "files": [
     "build/main",
