--- a/package.json
+++ b/package.json
@@ -101,6 +101,9 @@
   "peerDependencies": {
     "jsbi": "^3.2.0"
   },
+  "overrides": {
+    "@uniswap/sdk-core": "3.2.6"
+  },
   "files": [
     "build/main",
     "build/module",
