--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "fix:lint": "eslint src --ext .ts --fix",
     "prepare-release": "run-s cov:check doc:html version doc:publish",
     "test": "jest test/unit",
-    "integ-test": "TS_NODE=true jest test/integ"
+    "integ-test": "TS_NODE=true jest test/integ",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "buidl": "npm run build && tsc",
+    "start": "node dist/src/server.js",
+    "start:dev": "ts-node src/server.ts"
   },
   "engines": {
     "node": ">=10"
@@ -40,6 +44,8 @@
     "@uniswap/universal-router-sdk": "^1.3.9",
     "@uniswap/v2-sdk": "^3.0.1",
     "@uniswap/v3-sdk": "^3.7.0",
+    "apollo-server-errors": "^3.3.1",
+    "apollo-server-express": "^3.12.0",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
@@ -47,7 +53,11 @@
     "bunyan-blackhole": "^1.1.1",
     "ethers": "^5.7.2",
     "graphql": "^15.5.0",
+    "graphql-import-node": "^0.0.5",
+    "graphql-middleware": "^6.1.34",
     "graphql-request": "^3.4.0",
+    "graphql-scalars": "^1.22.2",
+    "graphql-shield": "^7.6.5",
     "lodash": "^4.17.21",
     "mnemonist": "^0.38.3",
     "node-cache": "^5.1.2",
