--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@types/express": "^4.17.17",
     "@uniswap/default-token-list": "^11.2.0",
     "@uniswap/permit2-sdk": "^1.2.0",
     "@uniswap/router-sdk": "^1.3.0",
