--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "incremental": true,
     "target": "es2017",
-    "rootDir": "./",
-    "outDir": "dist",
+    "outDir": "build/main",
     "moduleResolution": "node",
     "module": "commonjs",
     "declaration": true,
@@ -36,6 +35,6 @@
     "types": ["node", "jest"]
   },
   "include": ["src/index.ts", "src/server.ts", "cli/**/*.ts", "bin/**/*.ts"],
-  "exclude": ["node_modules", "test/**/*"],
+  "exclude": ["node_modules"],
   "compileOnSave": false
 }
