--- a/package.json
+++ b/package.json
@@ -98,6 +98,9 @@
     "typechain": "^5.0.0",
     "typescript": "^4.2.2"
   },
+  "overrides": {
+    "@uniswap/sdk-core": "4.0.6"
+  },
   "peerDependencies": {
     "jsbi": "^3.2.0"
   },
