--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@uniswap/universal-router-sdk": "^1.5.4",
     "@uniswap/v2-sdk": "^3.2.0",
     "@uniswap/v3-sdk": "^3.10.0",
+    "@uniswap/sdk-core": "^4.0.6",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
@@ -97,9 +98,6 @@
     "ts-node": "^10.8.1",
     "typechain": "^5.0.0",
     "typescript": "^4.2.2"
-  },
-  "overrides": {
-    "@uniswap/sdk-core": "4.0.6"
   },
   "peerDependencies": {
     "jsbi": "^3.2.0"
