--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "@uniswap/sdk-core": "^4.0.7",
     "@uniswap/swap-router-contracts": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.31",
-    "@uniswap/universal-router": "^1.0.1",
-    "@uniswap/universal-router-sdk": "^1.5.8",
+    "@uniswap/universal-router": "^1.6.0",
+    "@uniswap/universal-router-sdk": "^1.6.0",
     "@uniswap/v2-sdk": "^3.3.0",
     "@uniswap/v3-sdk": "^3.10.0",
     "async-retry": "^1.3.1",
+    "await-timeout": "^1.1.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
     "brotli": "^1.3.3",
