feat: Add hemi sepolia changes

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,7 @@
 name: Tests
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+# Disable tests in fork by only enabling them to run manually
+on: workflow_dispatch
 
 jobs:
   unit-tests:
