--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,10 +1,11 @@
 name: Semgrep
+# Disable tests in fork by only enabling them to run manually
 on:
   workflow_dispatch: {}
-  pull_request: {}
-  push:
-    branches:
-      - main
+  # pull_request: {}
+  # push:
+  #   branches:
+  #     - main
   schedule:
     # random HH:MM to avoid a load spike on GitHub Actions at 00:00
     - cron: '13 11 * * *'
