--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uniswap/smart-order-router",
+  "name": "@hemilabs/smart-order-router",
   "version": "3.26.1",
   "description": "Uniswap Smart Order Router",
   "main": "build/main/index.js",
@@ -7,7 +7,7 @@
   "module": "build/module/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/smart-order-router.git"
+    "url": "https://github.com/hemilabs/smart-order-router.git"
   },
   "license": "GPL",
   "keywords": [],
@@ -31,12 +31,13 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@ethersproject/bignumber": "^5.0.2",
     "@eth-optimism/sdk": "^3.2.2",
     "@types/brotli": "^1.3.4",
     "@uniswap/default-token-list": "^11.13.0",
     "@uniswap/permit2-sdk": "^1.2.0",
     "@uniswap/router-sdk": "^1.9.0",
-    "@uniswap/sdk-core": "^4.2.0",
+    "@hemilabs/sdk-core": "4.2.0-beta.2",
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
