--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,10 @@
     // "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
     // "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
     "lib": ["es2017", "dom"],
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "paths": {
+      "@uniswap/sdk-core": ["./node_modules/@hemilabs/sdk-core"]
+    }
   },
   "include": ["src/index.ts"],
   "compileOnSave": false
