add noHoist setting

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "license": "GPL",
   "keywords": [],
+  "installConfig": {
+    "hoistingLimits": "workspaces"
+  },
   "scripts": {
     "compile-v3-types": "npx typechain --target ethers-v5 --out-dir src/types/v3 './node_modules/@uniswap/?(v3-core|v3-periphery)/artifacts/contracts/**/*.json'",
     "compile-v2-types": "npx typechain --target ethers-v5 --out-dir src/types/v2 './node_modules/@uniswap/?(v2-core|v2-periphery)/build/*UniswapV2*.json'",
