Add niza chain support

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uniswap/smart-order-router",
+  "name": "@nizaglobal/smart-order-router",
   "version": "3.33.1",
   "description": "Uniswap Smart Order Router",
   "main": "build/main/index.js",
@@ -7,7 +7,7 @@
   "module": "build/module/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/smart-order-router.git"
+    "url": "https://github.com/nizaglobal/smart-order-router.git"
   },
   "license": "GPL",
   "keywords": [],
@@ -74,6 +74,7 @@
     "@types/node": "^15.0.2",
     "@types/sinon": "^10.0.2",
     "@types/stats-lite": "^2.2.0",
+    "@uniswap/sdk-core": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "@uniswap/v2-core": "^1.0.1",
