set to push button deploy

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,6 @@
 name: Release
 
-on:
-  release:
-    types: [published]
+on: workflow_dispatch # TODO set this on a deploy schedule
 
 jobs:
   release:
