chore(infra): add precommit hooks

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "fix:lint": "eslint src --ext .ts --fix",
     "prepare-release": "run-s cov:check doc:html version doc:publish",
     "test": "jest test/unit",
-    "integ-test": "TS_NODE=true jest test/integ --testRunner='jest-circus/runner'"
+    "integ-test": "TS_NODE=true jest test/integ --testRunner='jest-circus/runner'",
+    "prepare": "husky"
   },
   "engines": {
     "node": ">=10"
@@ -89,6 +90,7 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
     "hardhat": "^2.12.2",
+    "husky": "^9.1.5",
     "jest": "^27.0.6",
     "jest-circus": "^27.5.1",
     "jest-environment-hardhat": "^1.1.8",
